--- a/app/src/main/res/layout/fragment_register_userinfo.xml
+++ b/app/src/main/res/layout/fragment_register_userinfo.xml
@@ -111,7 +111,7 @@
                 android:layout_width="200dp"
                 android:onClick="@{()->registerUserInfoViewModel.onConfirmUserInfoClicked()}"
                 android:text="@string/ga_verder"
-                app:icon="@drawable/icoon_stad"
+                app:icon="@drawable/ic_gaverder"
                 app:layout_constraintBottom_toTopOf="@+id/guide_city_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_city_end"
                 app:layout_constraintHorizontal_bias="0.0"
