refactor: move draw functionality to own package
Details should not be tightly linked to events in order to cleanly
implement the backpack.

--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="drawViewModel"
-            type="be.hogent.faith.faith.emotionCapture.drawing.DrawViewModel" />
+            type="be.hogent.faith.faith.details.drawing.create.DrawViewModel" />
 
     </data>
 
