--- a/app/src/main/res/layout/panel_drawing_colors.xml
+++ b/app/src/main/res/layout/panel_drawing_colors.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="drawViewModel"
-            type="be.hogent.faith.faith.emotionCapture.drawing.DrawViewModel" />
+            type="be.hogent.faith.faith.details.drawing.create.DrawViewModel" />
 
         <import type="android.graphics.Color" />
 
