gebruik van dezelfde kleuren als de verfpotten voor tekenen en schrijven

--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -224,9 +224,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==@color/blue ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_blue"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.BLUE)}"
+                        android:onClick="@{() -> enterTextViewModel.pickTextColor(@color/blue)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_blue" />
@@ -237,9 +237,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.RED ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==@color/red ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_red"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.RED)}"
+                        android:onClick="@{() -> enterTextViewModel.pickTextColor(@color/red)}"
 
                         android:padding="5dp"
                         android:scaleType="centerInside"
@@ -251,9 +251,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.YELLOW ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==@color/yellow ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_yellow"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.YELLOW)}"
+                        android:onClick="@{() -> enterTextViewModel.pickTextColor(@color/yellow)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_yellow" />
@@ -264,9 +264,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{enterTextViewModel.selectedTextColor==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{enterTextViewModel.selectedTextColor==@color/green ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_green"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.GREEN)}"
+                        android:onClick="@{() -> enterTextViewModel.pickTextColor(@color/green)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_green" />
@@ -277,9 +277,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
-                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
+                        android:background="@{safeUnbox(enterTextViewModel.selectedTextColor)==@color/black ? @drawable/background : @drawable/background_noborder}"
                         android:contentDescription="@string/choose_black"
-                        android:onClick="@{() -> enterTextViewModel.pickTextColor(Color.BLACK)}"
+                        android:onClick="@{() -> enterTextViewModel.pickTextColor(@color/black)}"
                         android:padding="5dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/paintpot_black" />
