--- a/app/src/main/res/layout/panel_drawing_colors.xml
+++ b/app/src/main/res/layout/panel_drawing_colors.xml
@@ -32,9 +32,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==Color.BLACK ? @drawable/background : @drawable/background_noborder}"
+                android:background="@{((int)drawViewModel.selectedColor)==@color/black ? @drawable/background : @drawable/background_noborder}"
                 android:contentDescription="@string/choose_black"
-                android:onClick="@{() -> drawViewModel.pickColor(Color.BLACK)}"
+                android:onClick="@{() -> drawViewModel.pickColor(@color/black)}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/paintpot_black" />
@@ -45,9 +45,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==Color.BLUE ? @drawable/background : @drawable/background_noborder}"
+                android:background="@{((int)drawViewModel.selectedColor)==@color/blue ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_blue"
-                android:onClick="@{() -> drawViewModel.pickColor(Color.BLUE)}"
+                android:onClick="@{() -> drawViewModel.pickColor(@color/blue)}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/paintpot_blue" />
@@ -58,9 +58,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==Color.RED ? @drawable/background : @drawable/background_noborder }"
+                android:background="@{((int)drawViewModel.selectedColor)==@color/red ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_red"
-                android:onClick="@{() -> drawViewModel.pickColor(Color.RED)}"
+                android:onClick="@{() -> drawViewModel.pickColor(@color/red)}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/paintpot_red" />
@@ -71,9 +71,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==Color.YELLOW ? @drawable/background : @drawable/background_noborder }"
+                android:background="@{((int)drawViewModel.selectedColor)==@color/yellow ? @drawable/background : @drawable/background_noborder }"
                 android:contentDescription="@string/choose_yellow"
-                android:onClick="@{() -> drawViewModel.pickColor(Color.YELLOW)}"
+                android:onClick="@{() -> drawViewModel.pickColor(@color/yellow)}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/paintpot_yellow" />
@@ -84,9 +84,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                android:background="@{((int)drawViewModel.selectedColor)==Color.GREEN ? @drawable/background : @drawable/background_noborder}"
+                android:background="@{((int)drawViewModel.selectedColor)==@color/green ? @drawable/background : @drawable/background_noborder}"
                 android:contentDescription="@string/choose_green"
-                android:onClick="@{() -> drawViewModel.pickColor(Color.GREEN)}"
+                android:onClick="@{() -> drawViewModel.pickColor(@color/green)}"
                 android:padding="5dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/paintpot_green" />
