Toon opslag button bij foto nemen

--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -50,7 +50,7 @@
                 app:layout_constraintGuide_percent="0.2" />
 
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/btn_save_event_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
