--- a/app/src/main/res/layout/view_register_frame.xml
+++ b/app/src/main/res/layout/view_register_frame.xml
@@ -26,7 +26,10 @@
             android:hint="@string/hint_choose_username"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}"
+            app:errorEnabled="true"
+            >
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -36,7 +39,7 @@
                 android:drawableStart="@drawable/ic_login_wrap"
                 android:inputType="textPersonName"
                 android:text="@={registerUserInfoViewModel.userName}"
-                app:errorMessageResId="@{registerUserInfoViewModel.userNameErrorMessage}" />
+                 />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -46,6 +49,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Kies een wachtwoord"
+            app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}"
+            app:errorEnabled="true"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout_register_pwd_repeat"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
@@ -58,8 +63,7 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_lock_wrap"
                 android:inputType="textPassword"
-                android:text="@={registerUserInfoViewModel.password}"
-                app:errorMessageResId="@{registerUserInfoViewModel.passwordErrorMessage}" />
+                android:text="@={registerUserInfoViewModel.password}" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,6 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:hint="Herhaal je wachtwoord"
+            app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
+            app:errorEnabled="true"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -84,8 +90,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:drawableStart="@drawable/ic_lock_wrap"
-                android:text="@={registerUserInfoViewModel.passwordRepeated}"
-                app:errorMessageResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}" />
+                android:text="@={registerUserInfoViewModel.passwordRepeated}" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
