state buttons drawing

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -79,6 +79,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:onClick="@{()->drawViewModel.onPencilClicked()}"
+                        android:background="@drawable/btn_background_selected"
                         android:text="Penseel" />
 
                     <Button
@@ -86,6 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:onClick="@{()->drawViewModel.onTextClicked()}"
+                        android:background="@drawable/btn_background_selected"
                         android:text="Text" />
 
 
@@ -94,6 +96,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:onClick="@{()->drawViewModel.onEraserClicked()}"
+                        android:background="@drawable/btn_background_selected"
                         android:text="Gom" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
